parser/parser.output
   0  $accept : program $end

   1  program : decl_list

   2  decl_list : decl decl_list
   3            |

   4  decl : ident TOKEN_COLON type TOKEN_ASSIGN expr TOKEN_SEMICOLON
   5       | ident TOKEN_COLON type TOKEN_SEMICOLON
   6       | ident TOKEN_COLON type TOKEN_ASSIGN stmt_block
   7       | ident TOKEN_COLON type TOKEN_ASSIGN TOKEN_L_BRACE expr_list_not_empty_b TOKEN_R_BRACE TOKEN_SEMICOLON

   8  type : TOKEN_STRING
   9       | TOKEN_INTEGER
  10       | TOKEN_CHAR
  11       | TOKEN_BOOLEAN
  12       | TOKEN_ARRAY TOKEN_L_BRACKET opt_expr TOKEN_R_BRACKET type
  13       | TOKEN_FUNCTION type TOKEN_L_PAREN param_list TOKEN_R_PAREN
  14       | TOKEN_VOID

  15  param_list : param_list_not_empty
  16             |

  17  param_list_not_empty : param
  18                       | param TOKEN_COMMA param_list_not_empty

  19  param : ident TOKEN_COLON type

  20  stmt_list : stmt stmt_list
  21            |

  22  stmt : stmt_matched
  23       | stmt_unmatched

  24  stmt_matched : decl
  25               | expr TOKEN_SEMICOLON
  26               | TOKEN_FOR TOKEN_L_PAREN opt_expr TOKEN_SEMICOLON opt_expr TOKEN_SEMICOLON opt_expr TOKEN_R_PAREN stmt_matched
  27               | stmt_block
  28               | TOKEN_IF TOKEN_L_PAREN expr TOKEN_R_PAREN stmt_matched TOKEN_ELSE stmt_matched
  29               | TOKEN_RETURN opt_expr TOKEN_SEMICOLON
  30               | TOKEN_PRINT expr_list TOKEN_SEMICOLON

  31  stmt_block : TOKEN_L_BRACE stmt_list TOKEN_R_BRACE

  32  stmt_unmatched : TOKEN_IF TOKEN_L_PAREN expr TOKEN_R_PAREN stmt
  33                 | TOKEN_IF TOKEN_L_PAREN expr TOKEN_R_PAREN stmt_matched TOKEN_ELSE stmt_unmatched
  34                 | TOKEN_FOR TOKEN_L_PAREN opt_expr TOKEN_SEMICOLON opt_expr TOKEN_SEMICOLON opt_expr TOKEN_R_PAREN stmt_unmatched

  35  expr : expr TOKEN_ASSIGN expr_no_assign
  36       | expr_no_assign

  37  expr_no_assign : expr_no_assign TOKEN_OR expr_no_or
  38                 | expr_no_or

  39  expr_no_or : expr_no_or TOKEN_AND expr_no_and
  40             | expr_no_and

  41  expr_no_and : expr_no_and TOKEN_LT expr_no_cmp
  42              | expr_no_and TOKEN_GT expr_no_cmp
  43              | expr_no_and TOKEN_LE expr_no_cmp
  44              | expr_no_and TOKEN_GE expr_no_cmp
  45              | expr_no_and TOKEN_EQ expr_no_cmp
  46              | expr_no_and TOKEN_NE expr_no_cmp
  47              | expr_no_cmp

  48  expr_no_cmp : expr_no_cmp TOKEN_ADD expr_no_arith
  49              | expr_no_cmp TOKEN_SUB expr_no_arith
  50              | expr_no_arith

  51  expr_no_arith : expr_no_arith TOKEN_MUL expr_no_geo
  52                | expr_no_arith TOKEN_DIV expr_no_geo
  53                | expr_no_arith TOKEN_MOD expr_no_geo
  54                | expr_no_geo

  55  expr_no_geo : expr_no_geo TOKEN_EXP expr_no_exp
  56              | expr_no_exp

  57  expr_no_exp : TOKEN_SUB expr_no_exp
  58              | TOKEN_LOGICAL_NOT expr_no_exp
  59              | expr_no_unary

  60  expr_no_unary : expr_group TOKEN_INCREMENT
  61                | expr_group TOKEN_DECREMENT
  62                | expr_group

  63  expr_group : ident TOKEN_L_PAREN expr_list TOKEN_R_PAREN
  64             | ident TOKEN_L_BRACKET expr TOKEN_R_BRACKET
  65             | expr_primary

  66  expr_primary : ident
  67               | TOKEN_INTEGER_LITERAL
  68               | TOKEN_STRING_LITERAL
  69               | TOKEN_CHARACTER_LITERAL
  70               | TOKEN_TRUE
  71               | TOKEN_FALSE
  72               | TOKEN_L_PAREN expr TOKEN_R_PAREN

  73  expr_block : TOKEN_L_BRACE expr_list_not_empty_b TOKEN_R_BRACE

  74  opt_expr : expr
  75           |

  76  expr_list : expr_list_not_empty
  77            |

  78  expr_list_not_empty_b : expr_block TOKEN_COMMA expr_list_not_empty_b
  79                        | expr_block
  80                        | expr_list_not_empty

  81  expr_list_not_empty : expr
  82                      | expr TOKEN_COMMA expr_list_not_empty

  83  ident : TOKEN_IDENT

state 0
	$accept : . program $end  (0)
	decl_list : .  (3)

	TOKEN_IDENT  shift 1
	$end  reduce 3

	program  goto 2
	decl_list  goto 3
	decl  goto 4
	ident  goto 5


state 1
	ident : TOKEN_IDENT .  (83)

	.  reduce 83


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : decl_list .  (1)

	.  reduce 1


state 4
	decl_list : decl . decl_list  (2)
	decl_list : .  (3)

	TOKEN_IDENT  shift 1
	$end  reduce 3

	decl_list  goto 6
	decl  goto 4
	ident  goto 5


state 5
	decl : ident . TOKEN_COLON type TOKEN_ASSIGN expr TOKEN_SEMICOLON  (4)
	decl : ident . TOKEN_COLON type TOKEN_SEMICOLON  (5)
	decl : ident . TOKEN_COLON type TOKEN_ASSIGN stmt_block  (6)
	decl : ident . TOKEN_COLON type TOKEN_ASSIGN TOKEN_L_BRACE expr_list_not_empty_b TOKEN_R_BRACE TOKEN_SEMICOLON  (7)

	TOKEN_COLON  shift 7
	.  error


state 6
	decl_list : decl decl_list .  (2)

	.  reduce 2


state 7
	decl : ident TOKEN_COLON . type TOKEN_ASSIGN expr TOKEN_SEMICOLON  (4)
	decl : ident TOKEN_COLON . type TOKEN_SEMICOLON  (5)
	decl : ident TOKEN_COLON . type TOKEN_ASSIGN stmt_block  (6)
	decl : ident TOKEN_COLON . type TOKEN_ASSIGN TOKEN_L_BRACE expr_list_not_empty_b TOKEN_R_BRACE TOKEN_SEMICOLON  (7)

	TOKEN_ARRAY  shift 8
	TOKEN_BOOLEAN  shift 9
	TOKEN_CHAR  shift 10
	TOKEN_FUNCTION  shift 11
	TOKEN_INTEGER  shift 12
	TOKEN_STRING  shift 13
	TOKEN_VOID  shift 14
	.  error

	type  goto 15


state 8
	type : TOKEN_ARRAY . TOKEN_L_BRACKET opt_expr TOKEN_R_BRACKET type  (12)

	TOKEN_L_BRACKET  shift 16
	.  error


state 9
	type : TOKEN_BOOLEAN .  (11)

	.  reduce 11


state 10
	type : TOKEN_CHAR .  (10)

	.  reduce 10


state 11
	type : TOKEN_FUNCTION . type TOKEN_L_PAREN param_list TOKEN_R_PAREN  (13)

	TOKEN_ARRAY  shift 8
	TOKEN_BOOLEAN  shift 9
	TOKEN_CHAR  shift 10
	TOKEN_FUNCTION  shift 11
	TOKEN_INTEGER  shift 12
	TOKEN_STRING  shift 13
	TOKEN_VOID  shift 14
	.  error

	type  goto 17


state 12
	type : TOKEN_INTEGER .  (9)

	.  reduce 9


state 13
	type : TOKEN_STRING .  (8)

	.  reduce 8


state 14
	type : TOKEN_VOID .  (14)

	.  reduce 14


state 15
	decl : ident TOKEN_COLON type . TOKEN_ASSIGN expr TOKEN_SEMICOLON  (4)
	decl : ident TOKEN_COLON type . TOKEN_SEMICOLON  (5)
	decl : ident TOKEN_COLON type . TOKEN_ASSIGN stmt_block  (6)
	decl : ident TOKEN_COLON type . TOKEN_ASSIGN TOKEN_L_BRACE expr_list_not_empty_b TOKEN_R_BRACE TOKEN_SEMICOLON  (7)

	TOKEN_ASSIGN  shift 18
	TOKEN_SEMICOLON  shift 19
	.  error


state 16
	type : TOKEN_ARRAY TOKEN_L_BRACKET . opt_expr TOKEN_R_BRACKET type  (12)
	opt_expr : .  (75)

	TOKEN_IDENT  shift 1
	TOKEN_STRING_LITERAL  shift 20
	TOKEN_INTEGER_LITERAL  shift 21
	TOKEN_CHARACTER_LITERAL  shift 22
	TOKEN_FALSE  shift 23
	TOKEN_TRUE  shift 24
	TOKEN_SUB  shift 25
	TOKEN_L_PAREN  shift 26
	TOKEN_LOGICAL_NOT  shift 27
	TOKEN_R_BRACKET  reduce 75

	ident  goto 28
	expr  goto 29
	expr_no_or  goto 30
	expr_no_and  goto 31
	expr_no_cmp  goto 32
	expr_no_arith  goto 33
	expr_no_geo  goto 34
	expr_no_unary  goto 35
	expr_no_exp  goto 36
	expr_primary  goto 37
	opt_expr  goto 38
	expr_group  goto 39
	expr_no_assign  goto 40


state 17
	type : TOKEN_FUNCTION type . TOKEN_L_PAREN param_list TOKEN_R_PAREN  (13)

	TOKEN_L_PAREN  shift 41
	.  error


state 18
	decl : ident TOKEN_COLON type TOKEN_ASSIGN . expr TOKEN_SEMICOLON  (4)
	decl : ident TOKEN_COLON type TOKEN_ASSIGN . stmt_block  (6)
	decl : ident TOKEN_COLON type TOKEN_ASSIGN . TOKEN_L_BRACE expr_list_not_empty_b TOKEN_R_BRACE TOKEN_SEMICOLON  (7)

	TOKEN_IDENT  shift 1
	TOKEN_STRING_LITERAL  shift 20
	TOKEN_INTEGER_LITERAL  shift 21
	TOKEN_CHARACTER_LITERAL  shift 22
	TOKEN_FALSE  shift 23
	TOKEN_TRUE  shift 24
	TOKEN_SUB  shift 25
	TOKEN_L_PAREN  shift 26
	TOKEN_L_BRACE  shift 42
	TOKEN_LOGICAL_NOT  shift 27
	.  error

	ident  goto 28
	stmt_block  goto 43
	expr  goto 44
	expr_no_or  goto 30
	expr_no_and  goto 31
	expr_no_cmp  goto 32
	expr_no_arith  goto 33
	expr_no_geo  goto 34
	expr_no_unary  goto 35
	expr_no_exp  goto 36
	expr_primary  goto 37
	expr_group  goto 39
	expr_no_assign  goto 40


state 19
	decl : ident TOKEN_COLON type TOKEN_SEMICOLON .  (5)

	.  reduce 5


state 20
	expr_primary : TOKEN_STRING_LITERAL .  (68)

	.  reduce 68


state 21
	expr_primary : TOKEN_INTEGER_LITERAL .  (67)

	.  reduce 67


state 22
	expr_primary : TOKEN_CHARACTER_LITERAL .  (69)

	.  reduce 69


state 23
	expr_primary : TOKEN_FALSE .  (71)

	.  reduce 71


state 24
	expr_primary : TOKEN_TRUE .  (70)

	.  reduce 70


state 25
	expr_no_exp : TOKEN_SUB . expr_no_exp  (57)

	TOKEN_IDENT  shift 1
	TOKEN_STRING_LITERAL  shift 20
	TOKEN_INTEGER_LITERAL  shift 21
	TOKEN_CHARACTER_LITERAL  shift 22
	TOKEN_FALSE  shift 23
	TOKEN_TRUE  shift 24
	TOKEN_SUB  shift 25
	TOKEN_L_PAREN  shift 26
	TOKEN_LOGICAL_NOT  shift 27
	.  error

	ident  goto 28
	expr_no_unary  goto 35
	expr_no_exp  goto 45
	expr_primary  goto 37
	expr_group  goto 39


state 26
	expr_primary : TOKEN_L_PAREN . expr TOKEN_R_PAREN  (72)

	TOKEN_IDENT  shift 1
	TOKEN_STRING_LITERAL  shift 20
	TOKEN_INTEGER_LITERAL  shift 21
	TOKEN_CHARACTER_LITERAL  shift 22
	TOKEN_FALSE  shift 23
	TOKEN_TRUE  shift 24
	TOKEN_SUB  shift 25
	TOKEN_L_PAREN  shift 26
	TOKEN_LOGICAL_NOT  shift 27
	.  error

	ident  goto 28
	expr  goto 46
	expr_no_or  goto 30
	expr_no_and  goto 31
	expr_no_cmp  goto 32
	expr_no_arith  goto 33
	expr_no_geo  goto 34
	expr_no_unary  goto 35
	expr_no_exp  goto 36
	expr_primary  goto 37
	expr_group  goto 39
	expr_no_assign  goto 40


state 27
	expr_no_exp : TOKEN_LOGICAL_NOT . expr_no_exp  (58)

	TOKEN_IDENT  shift 1
	TOKEN_STRING_LITERAL  shift 20
	TOKEN_INTEGER_LITERAL  shift 21
	TOKEN_CHARACTER_LITERAL  shift 22
	TOKEN_FALSE  shift 23
	TOKEN_TRUE  shift 24
	TOKEN_SUB  shift 25
	TOKEN_L_PAREN  shift 26
	TOKEN_LOGICAL_NOT  shift 27
	.  error

	ident  goto 28
	expr_no_unary  goto 35
	expr_no_exp  goto 47
	expr_primary  goto 37
	expr_group  goto 39


state 28
	expr_group : ident . TOKEN_L_PAREN expr_list TOKEN_R_PAREN  (63)
	expr_group : ident . TOKEN_L_BRACKET expr TOKEN_R_BRACKET  (64)
	expr_primary : ident .  (66)

	TOKEN_L_PAREN  shift 48
	TOKEN_L_BRACKET  shift 49
	TOKEN_ADD  reduce 66
	TOKEN_DIV  reduce 66
	TOKEN_MOD  reduce 66
	TOKEN_SUB  reduce 66
	TOKEN_MUL  reduce 66
	TOKEN_EXP  reduce 66
	TOKEN_INCREMENT  reduce 66
	TOKEN_DECREMENT  reduce 66
	TOKEN_GT  reduce 66
	TOKEN_GE  reduce 66
	TOKEN_LT  reduce 66
	TOKEN_LE  reduce 66
	TOKEN_EQ  reduce 66
	TOKEN_NE  reduce 66
	TOKEN_ASSIGN  reduce 66
	TOKEN_AND  reduce 66
	TOKEN_OR  reduce 66
	TOKEN_SEMICOLON  reduce 66
	TOKEN_R_PAREN  reduce 66
	TOKEN_R_BRACE  reduce 66
	TOKEN_R_BRACKET  reduce 66
	TOKEN_COMMA  reduce 66


state 29
	expr : expr . TOKEN_ASSIGN expr_no_assign  (35)
	opt_expr : expr .  (74)

	TOKEN_ASSIGN  shift 50
	TOKEN_SEMICOLON  reduce 74
	TOKEN_R_PAREN  reduce 74
	TOKEN_R_BRACKET  reduce 74


state 30
	expr_no_assign : expr_no_or .  (38)
	expr_no_or : expr_no_or . TOKEN_AND expr_no_and  (39)

	TOKEN_AND  shift 51
	TOKEN_ASSIGN  reduce 38
	TOKEN_OR  reduce 38
	TOKEN_SEMICOLON  reduce 38
	TOKEN_R_PAREN  reduce 38
	TOKEN_R_BRACE  reduce 38
	TOKEN_R_BRACKET  reduce 38
	TOKEN_COMMA  reduce 38


state 31
	expr_no_or : expr_no_and .  (40)
	expr_no_and : expr_no_and . TOKEN_LT expr_no_cmp  (41)
	expr_no_and : expr_no_and . TOKEN_GT expr_no_cmp  (42)
	expr_no_and : expr_no_and . TOKEN_LE expr_no_cmp  (43)
	expr_no_and : expr_no_and . TOKEN_GE expr_no_cmp  (44)
	expr_no_and : expr_no_and . TOKEN_EQ expr_no_cmp  (45)
	expr_no_and : expr_no_and . TOKEN_NE expr_no_cmp  (46)

	TOKEN_GT  shift 52
	TOKEN_GE  shift 53
	TOKEN_LT  shift 54
	TOKEN_LE  shift 55
	TOKEN_EQ  shift 56
	TOKEN_NE  shift 57
	TOKEN_ASSIGN  reduce 40
	TOKEN_AND  reduce 40
	TOKEN_OR  reduce 40
	TOKEN_SEMICOLON  reduce 40
	TOKEN_R_PAREN  reduce 40
	TOKEN_R_BRACE  reduce 40
	TOKEN_R_BRACKET  reduce 40
	TOKEN_COMMA  reduce 40


state 32
	expr_no_and : expr_no_cmp .  (47)
	expr_no_cmp : expr_no_cmp . TOKEN_ADD expr_no_arith  (48)
	expr_no_cmp : expr_no_cmp . TOKEN_SUB expr_no_arith  (49)

	TOKEN_ADD  shift 58
	TOKEN_SUB  shift 59
	TOKEN_GT  reduce 47
	TOKEN_GE  reduce 47
	TOKEN_LT  reduce 47
	TOKEN_LE  reduce 47
	TOKEN_EQ  reduce 47
	TOKEN_NE  reduce 47
	TOKEN_ASSIGN  reduce 47
	TOKEN_AND  reduce 47
	TOKEN_OR  reduce 47
	TOKEN_SEMICOLON  reduce 47
	TOKEN_R_PAREN  reduce 47
	TOKEN_R_BRACE  reduce 47
	TOKEN_R_BRACKET  reduce 47
	TOKEN_COMMA  reduce 47


state 33
	expr_no_cmp : expr_no_arith .  (50)
	expr_no_arith : expr_no_arith . TOKEN_MUL expr_no_geo  (51)
	expr_no_arith : expr_no_arith . TOKEN_DIV expr_no_geo  (52)
	expr_no_arith : expr_no_arith . TOKEN_MOD expr_no_geo  (53)

	TOKEN_DIV  shift 60
	TOKEN_MOD  shift 61
	TOKEN_MUL  shift 62
	TOKEN_ADD  reduce 50
	TOKEN_SUB  reduce 50
	TOKEN_GT  reduce 50
	TOKEN_GE  reduce 50
	TOKEN_LT  reduce 50
	TOKEN_LE  reduce 50
	TOKEN_EQ  reduce 50
	TOKEN_NE  reduce 50
	TOKEN_ASSIGN  reduce 50
	TOKEN_AND  reduce 50
	TOKEN_OR  reduce 50
	TOKEN_SEMICOLON  reduce 50
	TOKEN_R_PAREN  reduce 50
	TOKEN_R_BRACE  reduce 50
	TOKEN_R_BRACKET  reduce 50
	TOKEN_COMMA  reduce 50


state 34
	expr_no_arith : expr_no_geo .  (54)
	expr_no_geo : expr_no_geo . TOKEN_EXP expr_no_exp  (55)

	TOKEN_EXP  shift 63
	TOKEN_ADD  reduce 54
	TOKEN_DIV  reduce 54
	TOKEN_MOD  reduce 54
	TOKEN_SUB  reduce 54
	TOKEN_MUL  reduce 54
	TOKEN_GT  reduce 54
	TOKEN_GE  reduce 54
	TOKEN_LT  reduce 54
	TOKEN_LE  reduce 54
	TOKEN_EQ  reduce 54
	TOKEN_NE  reduce 54
	TOKEN_ASSIGN  reduce 54
	TOKEN_AND  reduce 54
	TOKEN_OR  reduce 54
	TOKEN_SEMICOLON  reduce 54
	TOKEN_R_PAREN  reduce 54
	TOKEN_R_BRACE  reduce 54
	TOKEN_R_BRACKET  reduce 54
	TOKEN_COMMA  reduce 54


state 35
	expr_no_exp : expr_no_unary .  (59)

	.  reduce 59


state 36
	expr_no_geo : expr_no_exp .  (56)

	.  reduce 56


state 37
	expr_group : expr_primary .  (65)

	.  reduce 65


state 38
	type : TOKEN_ARRAY TOKEN_L_BRACKET opt_expr . TOKEN_R_BRACKET type  (12)

	TOKEN_R_BRACKET  shift 64
	.  error


state 39
	expr_no_unary : expr_group . TOKEN_INCREMENT  (60)
	expr_no_unary : expr_group . TOKEN_DECREMENT  (61)
	expr_no_unary : expr_group .  (62)

	TOKEN_INCREMENT  shift 65
	TOKEN_DECREMENT  shift 66
	TOKEN_ADD  reduce 62
	TOKEN_DIV  reduce 62
	TOKEN_MOD  reduce 62
	TOKEN_SUB  reduce 62
	TOKEN_MUL  reduce 62
	TOKEN_EXP  reduce 62
	TOKEN_GT  reduce 62
	TOKEN_GE  reduce 62
	TOKEN_LT  reduce 62
	TOKEN_LE  reduce 62
	TOKEN_EQ  reduce 62
	TOKEN_NE  reduce 62
	TOKEN_ASSIGN  reduce 62
	TOKEN_AND  reduce 62
	TOKEN_OR  reduce 62
	TOKEN_SEMICOLON  reduce 62
	TOKEN_R_PAREN  reduce 62
	TOKEN_R_BRACE  reduce 62
	TOKEN_R_BRACKET  reduce 62
	TOKEN_COMMA  reduce 62


state 40
	expr : expr_no_assign .  (36)
	expr_no_assign : expr_no_assign . TOKEN_OR expr_no_or  (37)

	TOKEN_OR  shift 67
	TOKEN_ASSIGN  reduce 36
	TOKEN_SEMICOLON  reduce 36
	TOKEN_R_PAREN  reduce 36
	TOKEN_R_BRACE  reduce 36
	TOKEN_R_BRACKET  reduce 36
	TOKEN_COMMA  reduce 36

